--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container__caixa">
             <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço
                 único.</h1>
-            <img src="../imagens/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua"
+            <img src="./imagens/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua"
                 class="container__imagem">
             <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
             <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
@@ -25,7 +25,7 @@
     </section>
 
     <section class="container secundario">
-        <img src="../imagens/Plataformas.png" alt="Um monitor e um celular com a alura plus aberta"
+        <img src="./imagens/Plataformas.png" alt="Um monitor e um celular com a alura plus aberta"
             class="secundario__imagem">
         <div class="container__descricao">
             <h2 class="descricao__titulo">Assista do seu jeito</h2>
@@ -42,11 +42,11 @@
             </p>
             <a href="www.alura.com.br" class="container__botao secundario__botao" container>Assine o Combo+</a>
         </div>
-        <img src="../imagens/Telas.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
+        <img src="./imagens/Telas.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
     </section>
 
     <section class="container secundario">
-        <img src="../imagens/Notebook.png" alt="Um notebook na tela da alura" class="secundario__imagem">
+        <img src="./imagens/Notebook.png" alt="Um notebook na tela da alura" class="secundario__imagem">
         <div class="container__descricao">
             <h2 class="descricao__titulo">Baixe seus cursos</h2>
             <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com
@@ -58,15 +58,15 @@
         <h2 class="descricao__titulo">Disponível nos seus dispositivos favoritos</h2>
         <ul class="dispositivos__lista">
             <li>
-                <img src="../imagens/tv.png" alt="icone tv">
+                <img src="./imagens/tv.png" alt="icone tv">
                 <h3 class="lista__item">TV</h3>
             </li>
             <li>
-                <img src="../imagens/computador.png" alt="icone computador">
+                <img src="./imagens/computador.png" alt="icone computador">
                 <h3 class="lista__item">Computador</h3>
             </li>
             <li>
-                <img src="../imagens/celular.png" alt="icone celular">
+                <img src="./imagens/celular.png" alt="icone celular">
                 <h3 class="lista__item">Celulares e tablets</h3>
             </li>
         </ul>
